unpackaged/main/default/objects/ETT_Staging_Fleet_Inspection__c/ETT_Staging_Fleet_Inspection__c.object-meta.xml
<CustomObject>
    <label>Staging Fleet Inspection</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Fleet Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Staging Fleet Inspection</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>