unpackaged/main/default/objects/ETT_Staging_Fleet_Inspection__c/fields/ETT_Designation__c.field-meta.xml
<CustomField>
    <fullName>ETT_Designation__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Designation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>