unpackaged/main/default/objects/ETT_Staging_Fleet_Inspection__c/fields/ETT_Inspector_Name__c.field-meta.xml
<CustomField>
    <fullName>ETT_Inspector_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Inspector Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>