unpackaged/main/default/objects/ETT_Staging_Fleet_Inspection__c/fields/ETT_Lead__c.field-meta.xml
<CustomField>
    <fullName>ETT_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Staging Fleet Inspection</relationshipLabel>
    <relationshipName>Staging_Fleet_Inspection</relationshipName>
    <type>Lookup</type>
</CustomField>