unpackaged/main/default/objects/ETT_Staging_Fleet_Inspection__c/fields/ETT_Pattern__c.field-meta.xml
<CustomField>
    <fullName>ETT_Pattern__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pattern</label>
    <referenceTo>ETT_Pattern_Master__c</referenceTo>
    <relationshipLabel>Staging Fleet Inspection</relationshipLabel>
    <relationshipName>Staging_Fleet_Inspection</relationshipName>
    <type>Lookup</type>
</CustomField>