unpackaged/main/default/objects/ETT_Staging_Fleet_Inspection__c/fields/ETT_Pattern_Master__c.field-meta.xml
<CustomField>
    <fullName>ETT_Pattern_Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pattern Master</label>
    <referenceTo>ETT_Pattern_Master__c</referenceTo>
    <relationshipLabel>Staging Fleet Inspection (Pattern Master)</relationshipLabel>
    <relationshipName>Staging_Fleet_Inspection1</relationshipName>
    <type>Lookup</type>
</CustomField>