unpackaged/main/default/objects/ETT_Staging_Fleet_Inspection__c/fields/ETT_PR__c.field-meta.xml
<CustomField>
    <fullName>ETT_PR__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>