unpackaged/main/default/objects/ETT_Staging_Fleet_Inspection__c/fields/ETT_Vehicle_Number__c.field-meta.xml
<CustomField>
    <fullName>ETT_Vehicle_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Vehicle Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>