unpackaged/main/default/objects/ETT_Staging_Fleet_Inspection__c/fields/Type_Model__c.field-meta.xml
<CustomField>
    <fullName>Type_Model__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Type Model</label>
    <length>250</length>
    <type>Text</type>
</CustomField>