unpackaged/main/default/objects/ETT_Staging_Fleet_Inspection__c/fields/Tyre_Position__c.field-meta.xml
<CustomField>
    <fullName>Tyre_Position__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Tyre Position</label>
    <length>250</length>
    <type>Text</type>
</CustomField>