unpackaged/main/default/objects/ETT_Staging_Fleet_Inspection__c/recordTypes/ETT_Bus.recordType-meta.xml
<RecordType>
    <fullName>ETT_Bus</fullName>
    <active>true</active>
    <label>Bus</label>
</RecordType>