unpackaged/main/default/objects/ETT_Staging_Fleet_Inspection__c/recordTypes/ETT_Trailor.recordType-meta.xml
<RecordType>
    <fullName>ETT_Trailor</fullName>
    <active>true</active>
    <label>Trailor</label>
</RecordType>