unpackaged/main/default/objects/ETT_Staging_Fleet_Inspection__c/recordTypes/ETT_Truck.recordType-meta.xml
<RecordType>
    <fullName>ETT_Truck</fullName>
    <active>true</active>
    <label>Truck</label>
</RecordType>